--- a/ejemplo2/acercade.html
+++ b/ejemplo2/acercade.html
@@ -4,85 +4,76 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="keywords" content="">
+    <meta name="description" content="porque queremos encontrarles un hogar a esos animalitos que viven en las calles">
+    <meta name="keywords" content="Adoptar ">
     <title>Ejemplo 2 Maquetacion HTML</title>
 </head>
 <body>
-    <!-- Inicia el Contenedor -->
-    <div>
-    <!-- Inicia Cabecera -->
     
-    <header>
-        <!-- Inicia el Menu -->
-        <nav>
-            <ul>
-                <li><a href="index.html">Inicio</a></li>
-                <li><a href="acercade.html">Acerca de</a></li>
-                <li><a href="#">Productos</a></li>
-                <li><a href="#">Contacto</a></li>
-            </ul>
-        </nav>
-        <!-- Fin del Menu -->
-    </header>
-    <!-- Fin cabecera -->
-    <!-- Inicia la Seccion Principal -->
-    <section>
-        <!-- Inicia la Imagen -->
+    <!-- Inicia contenedor -->
+    <div>
+<!-- Iniciar Cabecera -->
+<header>
+    <!-- Inicia el MENU -->
+    <nav>
+        <ul>
+            <li><a href="#">Donar</a></li>
+            <li><a href="#">Iniciar seccion</a></li>
+        </ul>
+    </nav>
+    <!-- Fin MENU -->
+</header>
+<!-- Fin Cabecera -->
+<!-- Inicia Seccion PRINCIPAL -->
+   <section>
+        <!-- Inicio de Adoptar -->
         <div>
-            <img src="img/foto1.jpg" alt="Foto Principal">
+            <img src="img/foto1.jpeg" alt="foto1">
+            <img src="img/foto2.jpeg" alt="foto2">
+            <img src="img/foto3.jpeg" alt="foto3">
         </div>
-        <!-- Fin de Imagen -->
-        <!-- Inicia Publicacion -->
-        <section>
-                <!-- Inicia Articulo -->
-                <article>
-                    <h2>Acerca de</h2>
-                    <p>
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quisquam obcaecati amet voluptas voluptatem. Iure unde amet rem ipsam iste? Magni possimus incidunt exercitationem, fugiat dignissimos dolorem ipsa ipsam accusamus quo.
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt provident molestiae quia aperiam dolores necessitatibus dolore commodi totam reiciendis, ad saepe voluptates maiores, possimus eveniet rerum tempora. Error, sed at.
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius fugiat architecto veniam autem quaerat natus tempora ut quidem. Ipsum praesentium optio amet odio doloremque quis ipsa vel delectus, eligendi quia!
-                    </p>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem voluptatem quis, inventore autem impedit distinctio quas rerum non voluptas, similique atque id in repudiandae commodi porro eius perferendis cum veniam.
-                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magni sapiente voluptatum ducimus fuga vel! Esse ratione temporibus architecto reprehenderit. Quos commodi, dolore nihil praesentium beatae placeat corporis dignissimos expedita magni!
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aspernatur ipsum, exercitationem aliquid maiores accusamus error facere, modi non, quae pariatur doloremque dignissimos architecto nobis! Voluptas ratione quos sint aut eveniet?
-                    </p>
-                </article>
-                <!-- Fin de Articulo -->
-        </section>
-        <!-- Fin de Publicaion -->
-        
+        <!-- Fin de Adoptar -->
     </section>
-    <!-- Fin de la Seccion Principal -->
-    <!-- Inicia Anuncios -->
-    <aside>
-        <!-- Inicia Destacados  -->
-        <div>
-            <h3>Articulo Destacados</h3>
-            <ul>
-                <li><a href="#"> Lorem ipsum dolor sit amet consectetur adipisicing elit.</a></li>
-                <li><a href="#"> Lorem ipsum dolor sit amet consectetur adipisicing elit.</a></li>
-                <li><a href="#"> Lorem ipsum dolor sit amet consectetur adipisicing elit.</a></li>
-                <li><a href="#"> Lorem ipsum dolor sit amet consectetur adipisicing elit.</a></li>
-                <li><a href="#"> Lorem ipsum dolor sit amet consectetur adipisicing elit.</a></li>
-            </ul>
-        </div>
-        <!-- Fin Destacados -->
-        <!-- Inicia Informacion -->
-        <div>
-            <h3>Informacion</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim nemo consectetur quos magnam itaque, vero sint dolorum reiciendis rem quo beatae in rerum voluptates aperiam facere possimus nisi iusto aliquid.</p>
-        </div>
-        <!-- Fin Informacion -->
-    </aside>
-    <!-- Fin Anuncios -->
-    <!-- Incio Pie -->
+        <!-- Fin de Seccion Principal -->
+    <!-- Inicio de Voluntad -->
+   <section>
+   <ul>
+    <li><a href="#">Quiero Adoptar</a></li>
+    <li><a href="#">Quiero Apadrinar</a></li>
+</ul>
+</section>
+    <!-- Fin de Voluntad -->
+    <!--  Inicio Publicitario-->
+    <section>
+        <!-- Inicio de Articulo -->
+        <article>
+            <p>Nosotros escogimos hacer esta pagina por que nos encantan las mascotas y porque queremos encontrarles un hogar a esos animalitos que viven en las calles, sabias que los perritos son el numero 1 en abandonos en el mundo, en el segundo lugar se encuentran los gatos y en el tercero los conejos, algunas personas se compran o adoptan mascotas solo por un momento luego se aburren y los botan a la basura o los dejan en las calles también por esta razón nosotros para asegurarnos de que las mascotas adoptadas no serán echadas otra vez a la calle haremos seguimientos cada cierto tiempo para asegurarnos de que son felices en sus nuevos hogares.</p>
+        </article>
+        <section>
+            <!-- Inicio de Historia -->
+            <div>
+                <h3>Personas emocionadas</h3>
+                <ul>
+                <img src="img/3foto.jpeg" alt="foto3">
+                <img src="img/foto.png" alt="foto">
+            </div>
+            <!-- Fin de Historia -->
+            <!-- Inicio de Voluntad y donaciones -->
+    <section>
+        <li><a href="#">Adopcion responsable</a></li>
+        <li><a href="#">Donacion agua y comida</a></li>
+        <li><a href="#">Salud y Esterilizacion</a></li>
+        <li><a href="#">Educaion y cuidados</a></li>
+    </ul>
+    </section>
+            <!-- Fin de Voluntad y donaciones -->
+    </section>
+    <!-- Inicio pie -->
     <footer>
-        <p>Mario Antonio Huapalla Morales 2021 - Todos los Derechos Rservados</p>
-    </footer>
-    <!-- Fin Pie -->
+        <p>Para mas informacion contactenos a </p>
+        <img src="img/aplicaciones.jpeg" alt="aplicaciones">
+    <!-- Fin Contenedor -->
+
 </div>
-<!-- Fin del Contenedor -->
 </body>
 </html>
