--- a/ejemplo2/index.html
+++ b/ejemplo2/index.html
@@ -6,74 +6,87 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="porque queremos encontrarles un hogar a esos animalitos que viven en las calles">
     <meta name="keywords" content="Adoptar ">
-    <title>Adoptar es Amar - Proyecto1</title>
+    <title>Ejemplo 2 Maquetacion HTML</title>
+    <link rel="stylesheet" href="css/miestilo.css" type="text/css">
 </head>
 <body>
-    <h1>Happy Paws LIFE</h1>
+    
     <!-- Inicia contenedor -->
     <div>
 <!-- Iniciar Cabecera -->
 <header>
     <!-- Inicia el MENU -->
-    <nav>
-        <ul>
-            <li><a href="#">Donar</a></li>
-            <li><a href="#">Iniciar seccion</a></li>
-        </ul>
-    </nav>
-    <!-- Fin MENU -->
-</header>
-<!-- Fin Cabecera -->
-<!-- Inicia Seccion PRINCIPAL -->
-   <section>
-        <!-- Inicio de Adoptar -->
-        <div>
-            <img src="img/foto1.jpeg" alt="foto1">
-            <img src="img/foto2.jpeg" alt="foto2">
-            <img src="img/foto3.jpeg" alt="foto3">
-        </div>
-        <!-- Fin de Adoptar -->
-    </section>
-        <!-- Fin de Seccion Principal -->
-    <!-- Inicio de Voluntad -->
-   <section>
-   <ul>
-    <li><a href="#">Quiero Adoptar</a></li>
-    <li><a href="#">Quiero Apadrinar</a></li>
-</ul>
-</section>
-    <!-- Fin de Voluntad -->
-    <!--  Inicio Publicitario-->
-    <section>
-        <!-- Inicio de Articulo -->
-        <article>
-            <p>Nosotros escogimos hacer esta pagina por que nos encantan las mascotas y porque queremos encontrarles un hogar a esos animalitos que viven en las calles, sabias que los perritos son el numero 1 en abandonos en el mundo, en el segundo lugar se encuentran los gatos y en el tercero los conejos, algunas personas se compran o adoptan mascotas solo por un momento luego se aburren y los botan a la basura o los dejan en las calles también por esta razón nosotros para asegurarnos de que las mascotas adoptadas no serán echadas otra vez a la calle haremos seguimientos cada cierto tiempo para asegurarnos de que son felices en sus nuevos hogares.</p>
-        </article>
-        <section>
-            <!-- Inicio de Historia -->
-            <div>
-                <h3>Personas emocionadas</h3>
-                <ul>
-                <img src="img/3foto.jpeg" alt="foto3">
-                <img src="img/foto.png" alt="foto">
-            </div>
-            <!-- Fin de Historia -->
-            <!-- Inicio de Voluntad y donaciones -->
-    <section>
-        <li><a href="#">Adopcion responsable</a></li>
-        <li><a href="#">Donacion agua y comida</a></li>
-        <li><a href="#">Salud y Esterilizacion</a></li>
-        <li><a href="#">Educaion y cuidados</a></li>
-    </ul>
-    </section>
-            <!-- Fin de Voluntad y donaciones -->
-    </section>
-    <!-- Inicio pie -->
-    <footer>
-        <p>Para mas informacion contactenos a </p>
-        <img src="img/aplicaciones.jpeg" alt="aplicaciones">
-    <!-- Fin Contenedor -->
-
-</div>
+<nav> 
+            <ul> 
+            <li>
+                <a href="index.html">Inicio</a></li> 
+                <li><a href="acercade.html">Acerca de</a></li> 
+                <li><a href="#">Productos </a></li> 
+            <li><a href="#">Contacto</a></li> 
+        </ul> 
+    </nav> 
+            <!-- Fin del Menu --> 
+        </header> 
+        <!-- Fin Cabecera --> 
+        <!-- Inicia la Seccion Principal --> 
+        <section class="principal"> 
+            <!-- Inicia la Imagen --> 
+            <div class="imagen"> 
+            <img src="img/foto1.jpg" alt="Foto principal"> 
+        </div> 
+        <!-- Fin de la Imagen --> 
+        <!-- Inicia Publicaciones --> 
+        <section> 
+            <!-- Inicia Articulo --> 
+            <article> 
+            <h2>Título del Artículo</h2>
+            <p> 
+                Lorem ipsum dolor, sit amet consectetur adipisicing e lit. Temporibus mollitia delectus, vel reiciendis animi fugit ad facilis voluptatum q uae voluptates, veniam libero! Labore, rem. Ea obcaecati soluta voluptates voluptatum 
+                blanditiis. 
+                Lorem ipsum, dolor sit amet consectetur adipisicing e lit. Officia maiores vitae, perferendis accusantium doloremque modi minus sunt quae v oluptas odit repellendus officiis perspiciatis asperiores placeat totam laudantium po ssimus quaerat esse! 
+                Lorem ipsum dolor sit amet consectetur adipisicing el it. Voluptatibus architecto asperiores, excepturi nesciunt fugiat tempore sint incidu nt deleniti doloribus dignissimos necessitatibus est ipsum itaque porro ut quae odit non amet? 
+                </p> 
+                <p> 
+                Lorem ipsum dolor sit, amet consectetur adipisicing e lit. Corrupti officiis in a quae impedit magni hic alias doloremque architecto, magna m suscipit maxime est expedita tempore. Totam doloremque nostrum optio deleniti! 
+                Lorem ipsum dolor sit amet, consectetur adipisicing e lit. Deleniti incidunt excepturi doloribus ipsam corporis maiores, ipsa, voluptatum o bcaecati repudiandae vitae nihil error necessitatibus nisi numquam. Temporibus aliqua m beatae quod doloribus. 
+                Lorem ipsum dolor sit amet consectetur adipisicing el it. Eum quisquam quam illum quidem doloremque esse veritatis suscipit, ipsam, magni p rovident sapiente officiis, saepe atque debitis itaque voluptatem nam dolorum at. 
+                </p> 
+            </article> 
+                <!-- Fin del Articulo --> 
+            </section> 
+                <!-- Fin de Publicacion --> 
+            </section> 
+            <!-- Fin de la Seccion Principal --> 
+            <!-- Inicia Anuncios --> 
+            <aside> 
+                <!-- Inicia Destacados --> 
+                <div class="anuncio"> 
+                <h3 class="tituloanuncio">Artículos Destacados </h3> 
+                <ul> 
+                <li><a href="#">Lorem ipsum dolor sit, amet consectetur a dipisicing elit.</a></li> 
+                <li><a href="#">Lorem ipsum dolor sit, amet consectetur a dipisicing elit.</a></li> 
+                <li><a href="#">Lorem ipsum dolor sit, amet consectetur a dipisicing elit.</a></li> 
+                <li><a href="#">Lorem ipsum dolor sit, amet consectetur a dipisicing elit.</a></li> 
+                <li><a href="#">Lorem ipsum dolor sit, amet consectetur a dipisicing elit.</a></li> 
+                </ul> 
+            </div> 
+            <!-- Fin Destacados --> 
+            <!-- Inicia Informacion --> 
+            <div class="anuncio"> 
+                <h3 class="tituloanuncio">Información</h3> 
+                <p> 
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illum quibusdam earum deserunt odio repellendus modi aperiam, minus dolor quis moles tias saepe eius ipsa sit iusto eveniet maxime voluptates omnis temporibus. 
+                </p>
+            </div> 
+            <!-- Fin Informacion --> 
+        </aside> 
+        <!-- Fin Anuncios --> 
+        <!-- Inicio Pie --> <footer> 
+        <p> Anderson Rodrigo Huaccha Chirinos 2021 - Todos los Derechos Reservados </p> 
+        </footer> 
+        <!-- Fin Pie --> 
+    </div> 
+    <!-- Fin del Contenedor --> 
+        
 </body>
 </html>
